move page and create redirects

--- a/docs/solana/migration/ledger.mdx
+++ b/docs/solana/migration/ledger.mdx
@@ -19,8 +19,7 @@ April 19, 2023.
 
 You can migrate your tokens any time after April 19, 2023. There is no need to rush to migrate your
 tokens unless you want to lock up HNT early to receive the
-[3X veHNT landrush bonus.](/mine-hnt/validators/validators-and-voting-power/#is-there-a-staking-genesis-period)
-:::
+[3X veHNT landrush bonus.](/vote-escrow/voting-power/#is-there-a-staking-genesis-period) :::
 
 :::tip Video Walkthrough
 
@@ -58,7 +57,8 @@ migration process.
 
 ## Migration Tool
 
-Your public key will change on Solana but the private key will remain the same. Note this app only works with Chrome, Brave, or other Chromium-based web browsers.
+Your public key will change on Solana but the private key will remain the same. Note this app only
+works with Chrome, Brave, or other Chromium-based web browsers.
 
 - [Helium-Solana Ledger App](https://github.com/helium/app-helium-solana) now available from Ledger
   Live (ensure Developer Mode is enabled)
