--- a/docs/solana/migration/validator-operator.mdx
+++ b/docs/solana/migration/validator-operator.mdx
@@ -26,9 +26,8 @@ HNT.
 :::tip VeHNT, a New Way to Stake:
 
 After the transition, veHNT will replace staked HNT and will be represented by a non-transferable
-Solana NFT held in your wallet.  
-veHNT grants holders voting rights to influence the future of the Helium Network and the ability to
-earn IOT and/or MOBILE through subDAO delegation.
+Solana NFT held in your wallet. veHNT grants holders voting rights to influence the future of the
+Helium Network and the ability to earn IOT and/or MOBILE through subDAO delegation.
 
 :::
 
@@ -58,30 +57,28 @@ For example:
 
 Follow these steps to migrate your validators:
 
-**Step 1: Monitor the status of the migration**  
-Communications will be provided throughout the day of the migration via Twitter & Discord. The
-migration will begin at 16:00:00 UTC on April 18. After 16:00:00 UTC on April 19, Helium validators
-can be shut down following comms from core developers. Validators will no longer produce blocks for
-the Helium Network and will not receive HNT rewards.
+**Step 1: Monitor the status of the migration** Communications will be provided throughout the day
+of the migration via Twitter & Discord. The migration will begin at 16:00:00 UTC on April 18. After
+16:00:00 UTC on April 19, Helium validators can be shut down following comms from core developers.
+Validators will no longer produce blocks for the Helium Network and will not receive HNT rewards.
 
-**Step 2: Access your staked HNT**  
-If you haven't already, move wallets holding staked validators into the Helium Wallet App. After the
-migration, your staked HNT will automatically become veHNT and stay entirely in your wallet's
-custody. A non-transferable Solana NFT held in your wallet represents veHNT ownership.
+**Step 2: Access your staked HNT** If you haven't already, move wallets holding staked validators
+into the Helium Wallet App. After the migration, your staked HNT will automatically become veHNT and
+stay entirely in your wallet's custody. A non-transferable Solana NFT held in your wallet represents
+veHNT ownership.
 
 If your validators are staked with HNT on a Ledger, migrate the Ledger Wallet using the
 [Ledger Migration Guide](/solana/migration/ledger).
 
-**Step 3: Automatic conversion to veHNT**  
-On April 18, 2023, all validators still staked or in cooldown will automatically convert to veHNT
-with a six-month staking release date, as described in HIP-70. Each validator will receive 375,000
-veHNT as a veHNT position for six months with rolling lock-up, called "constant lock-up."
+**Step 3: Automatic conversion to veHNT** On April 18, 2023, all validators still staked or in
+cooldown will automatically convert to veHNT with a six-month staking release date, as described in
+HIP-70. Each validator will receive 375,000 veHNT as a veHNT position for six months with rolling
+lock-up, called "constant lock-up."
 
-**Step 4: Delegation to subDAOs**  
-Decide which subDAO or combination of subDAOs ([IOT](/helium-tokens/iot) and
-[MOBILE](/helium-tokens/mobile)) you want to delegate your veHNT to. You can have multiple positions
-of veHNT delegated to different subDAOs or for different lock-up periods. Each position of veHNT can
-delegate all or nothing of the veHNT.
+**Step 4: Delegation to subDAOs** Decide which subDAO or combination of subDAOs
+([IOT](/helium-tokens/iot) and [MOBILE](/helium-tokens/mobile)) you want to delegate your veHNT to.
+You can have multiple positions of veHNT delegated to different subDAOs or for different lock-up
+periods. Each position of veHNT can delegate all or nothing of the veHNT.
 
 Delegation of veHNT can be managed within the [Helium Wallet App](/wallets/helium-wallet-app) using
 Realms.
@@ -180,7 +177,7 @@ Lock-up periods help incentivize long-term holders of HNT and deter short-term s
 with shorter-term interests in the governance of the Network.
 
 The amount of veHNT received for a lock-up period
-[can be seen in this table](https://docs.helium.com/mine-hnt/validators/validators-and-voting-power/#how-much-vehnt-will-i-get-for-each-lock-up-period).
+[can be seen in this table](/vote-escrow/voting-power/#how-much-vehnt-will-i-get-for-each-lock-up-period).
 
 ### What if I do nothing about my validator stake?
 
