--- a/docs/vote-escrow/voting-power.mdx
+++ b/docs/vote-escrow/voting-power.mdx
@@ -1,11 +1,11 @@
 ---
-id: validators-and-voting-power
-title: Validators And Voting Power
-pagination_label: Validators And Voting Power
-sidebar_label: Validators And Voting Power
+id: voting-power
+title: Voting Power
+pagination_label: Voting Power
+sidebar_label: Voting Power
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
-slug: /mine-hnt/validators/validators-and-voting-power
+slug: /vote-escrow/voting-power
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
@@ -126,7 +126,7 @@ wishing to extend the lock-up duration on parts of a Position requires a similar
 ### How Can I Obtain veHNT?
 
 Staking HNT for veHNT will be done on [Realms](https://realms.heliumvote.com/dao/hnt) See the
-[Staking veHNT on Realms](https://docs.helium.com/vote-escrow/realms) documentation
+[Staking veHNT on Realms](/vote-escrow/realms) documentation
 
 ### Is There a Staking "Genesis" Period?
 
