--- a/docs/oracles/rewards-oracles.mdx
+++ b/docs/oracles/rewards-oracles.mdx
@@ -140,4 +140,4 @@ This is a "one-way" transaction to convert your subDNT into HNT, as you can not 
   roll out the new `gateway-rs` image, which will tell Hotspots to communicate with the packet
   routers instead of LNS state channels.
 - To learn more about how staking and governance will change, refer to the documentation on
-  [Validators and Voting Power](/mine-hnt/validators/validators-and-voting-power).
+  [Voting Power](/vote-escrow/voting-power).
